--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=postgres
 spring.datasource.password=vezumu10
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
