--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
+.gitignore
 .idea
 *.iws
 *.iml
@@ -31,3 +32,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Docker-related
+.env  # файл с переменными окружения для защиты конфиденциальной информации
